2026-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/DataFrame.h (nrow): Use R_nrow() with R >= 4.6.0
	* inst/include/Rcpp/proxy/AttributeProxy.h (attributeNames): Use
	R_getAttribNames() with R >= 4.6.0;
	* inst/include/Rcpp/proxy/AttributeProxy.h (hasAttribute): Use
	R_hasAttrib with R >= 4.6.0

2026-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2026-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/date_datetime/Datetime.h: Fractional seconds type
	switched to 'int' for consistency, print format string re-adjusted

2026-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/date_datetime/Datetime.h (format): Correct a
	format string reflecting 'unsigned int' rather than 'int'

2026-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/cpp/attributes_extended.cpp: New unit tests
	* inst/tinytest/test_attributes_extended.R: Idem
	* inst/tinytest/test_compile_attributes_errors.R: Idem
	* inst/tinytest/test_cppfunction_errors.R: Idem
	* inst/tinytest/test_sourcecpp_errors.R: Idem
	* R/Attributes.R: Remove #nocov tags
	* src/attributes.cpp: Idem

2026-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/exceptions_impl.h: Combine previous and current
	methods enabling when 'execinfo.h' is found on selected platforms

2026-01-08  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.1.1

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem

2026-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/pdf/*: Rebuilt

	* vignettes/rmd/Rcpp.bib: Updates to several URLs
	* inst/bib/Rcpp.bib: Idem
	* vignettes/rmd/*: Idem
	* README.md: Idem

2026-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date